--- a/index.html
+++ b/index.html
@@ -1,129 +1,175 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
-	<link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>Глэйси</title>
+	<link rel="stylesheet" href="css/style.css_">
+</head>
+<body >
+<h1 class="title-hidden">Магазин мороженого Глэйси</h1>
 
-    <!--<p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>-->
-	<header class="block-header">
-		<nav class="block-header__menu"></nav>
-		<b class="block-header__title">Крем-брюле и пломбир с малиновым джемом</b>
-		<a class="btn btn-red btn-white-text btn-large">Давайте оба!</a>
-		<div class="block-header__slider"></div>
-	</header>
-	<section class="block-promo">		
-		<div class="block-promo__item">
-			<b class="block-promo__item-title">Малинка даром!</b>
-			<div class="block-promo__item-text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</div>
-			<a class="block-promo__item-button btn btn-red btn-white-text btn-normal">Хочу варенье!</a>
+<header class="block-header">
+	<nav class="block-header__menu">
+		<h2 class="title-hidden">Главное меню, поиск, авторизация, корзина</h2>	
+		<img class="block-header__menu-logo" src="img/logo.jpg" alt="Логотип Глэйси" width="156" height="60">
+			<ul class="block-header__menu-main">
+			<li class="block-header__menu-main-item">
+				<a href="catalog.html" class="block-header__menu-main-link inline-link">Каталог</a>
+			</li>
+			<li class="block-header__main-item">
+				<a href="delivery.html" class="block-header__menu-main-link inline-link">Доставка и оплата</a>
+			</li>
+			<li class="block-header__main-menu-item">
+				<a href="about-company.html" class="block-header__menu-main-link inline-link">О компании</a>
+			</li>
+		</ul>
+		<div class="block-header__menu-personal">			
+			<a href="#" class="block-header__menu-personal-link inline-link" title="Поиск">&#xA0;</a>
+			<a href="#" class="block-header__menu-personal-link inline-link" title="Авторизация">Вход</a>			
+			<a href="#" class="block-header__menu-personal-link inline-link" title="Корзина">Пусто</a>			
 		</div>
-		<div class="block-promo__item ">
-			<b class="block-promo__item-title">Шоколадка даром</b>
-			<div class="block-promo__item-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</div>
-			<a class="block-promo__item-button btn btn-red btn-white-text btn-normal">Хочу шоколадки!</a>
-		</div>
-		<h2 class="block-promo-title hidden-title">Акции</h2>	
-	</section>
+	</nav>
 
-	
-	<section class="block-catalog">
-		<div class="block-catalog__item">
-			<img class="block-catalog__item-img hit" width="224" height="220" src="img/ice-cream-1.jpg" alt="Не удалось зазрузить изображение">
+	<div class="block-header--info">
+		<h2 class="title-hidden">Часы работы и телефон для связи</h2>	
+		<p>c 10 до 20, ежедневно</p>
+		<p>8 812 450-25-25</p>
+	</div>
+	<b class="block-header__title">Крем-брюле и пломбир с малиновым джемом</b>
+	<a href="#" class="btn btn-red btn-white-text btn-large">Давайте оба!</a>	
+</header>
+
+<!--*** Где-то здесь (а может быть и не здесь) будут label'ы от option'ов	слайдера. Скорее всего, все содержимое body нужно будет обернуть в контейнер, а невидимые option'ы выкинуть за пределы этого контейнера. Если цвет скриптом менять нельзя по техзаданию... -->
+<div class="slider-сontrol"></div>
+
+<section class="block-promo">			
+	<h2 class="title-hidden">Акции</h2>	
+	<div class="block-promo__item">
+		<b class="block-promo__item-title">Малинка даром!</b>
+		<div class="block-promo__item-text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</div>
+		<!--*** Наверное, если по нажатию block-promo__item-button подразумевался какой-нибудь скрипт, который добавляет в корзину 2 кг мороженого и нечто бесплатно, то лучше это разметить как кнопку, а если подразумевался просто переход на карточку мороженого - то ссылкой. -->
+		<a href="#" class="block-promo__item-button btn btn-red btn-white-text btn-normal">Хочу варенье!</a>
+	</div>
+	<div class="block-promo__item">
+		<b class="block-promo__item-title">Шоколадка даром</b>
+		<div class="block-promo__item-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</div>
+		<a href="#" class="block-promo__item-button btn btn-red btn-white-text btn-normal">Хочу шоколадки!</a>
+	</div>
+	<!--*** Вещь, которую не могу для себя пока объяснить. Если добавить заголовок (скрытый или нет) в начале секции, то селектор block-promo__item:nth-child() работает со сдвигом, т.е. то, что является первым элементом такого класса, нужно нумеровать как 2, и т.д...	Как будто заголовок тоже этого класса. "Это не баг, это фича?"
+	Ну, или я что-то недопонимаю.	И без того грязноватый код становится еще хуже. Зато двигаюсь к "страница, как документ" :-) -->	
+</section>
+
+<!--***  Ну, тут вообще у меня какая-то полная ерунда в block-catalog__item. Нужно передумывать и переделывать почти полностью. Выглядит похоже, а на самом-то деле... -->
+<section class="block-catalog">
+	<h2 class="block-catalog-title title-hidden">Каталог. Хиты.</h2>	
+	<ul class="block-catalog__items">
+		<li class="block-catalog__item">
+			<img class="block-catalog__item-img" width="200" height="230"  src="img/ice-cream-1.jpg" alt="Сливочное с апельсиновым джемом">
 			<p class="block-catalog__item-price">
 				<span class="block-catalog__item-price-cost">310</span>
 				<span class="block-catalog__item-price-currency">Р</span>
 				<span>/</span>
 				<span class="block-catalog__item-price-unit">кг</span>
 			</p>
-			<p class="block-catalog__item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>			
-			<a class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
-		</div>
-		<div class="block-catalog__item">
-			<img class="block-catalog__item-img" width="224" height="220" src="img/ice-cream-2.jpg"  alt="Не удалось зазрузить изображение">
+			<a href="catalog-item.html" class="block-catalog__item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>			
+			<a href="#" class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
+		</li>
+		<li class="block-catalog__item">
+			<img class="block-catalog__item-img" width="200" height="230" src="img/ice-cream-2.jpg"  alt="Сливочное-кофейное">
 			<p class="block-catalog__item-price">
 				<span class="block-catalog__item-price-cost">380</span>
 				<span class="block-catalog__item-price-currency">Р</span>
 				<span>/</span>
 				<span class="block-catalog__item-price-unit">кг</span>
 			</p>
-			<p class="block-catalog__item-name">Сливочное-кофейное с кусочками шоколада </p>
-			<a class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
-		</div>
-		<div class="block-catalog__item">
-			<img class="block-catalog__item-img" width="224" height="220" src="img/ice-cream-3.jpg"  alt="Не удалось зазрузить изображение">
+			<a class="block-catalog__item-name">Сливочное-кофейное с кусочками шоколада </a>
+			<a href="#" class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
+		</li>
+		<li class="block-catalog__item">
+			<img class="block-catalog__item-img" width="200" height="230" src="img/ice-cream-33.jpg"  alt="Сливочно-клубничное">
 			<p class="block-catalog__item-price">
 				<span class="block-catalog__item-price-cost">355</span>
 				<span class="block-catalog__item-price-currency">Р</span>
 				<span>/</span>
 				<span class="block-catalog__item-price-unit">кг</span>
 			</p>
-			<p class="block-catalog__item-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
-			<a class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
-		</div>
-		<div class="block-catalog__item">
-			<img class="block-catalog__item-img" width="224" height="220" src="img/ice-cream-4.jpg"  alt="Не удалось зазрузить изображение">
+			<a href="catalog-item.html" class="block-catalog__item-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
+			<a href="#" class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
+		</li>
+		<li class="block-catalog__item">
+			<img class="block-catalog__item-img" width="200" height="230" src="img/ice-cream-4.jpg"  alt="Сливочное крем-брюле">
 			<p class="block-catalog__item-price">
 				<span class="block-catalog__item-price-cost">415</span>
 				<span class="block-catalog__item-price-currency">Р</span>
 				<span>/</span>
 				<span class="block-catalog__item-price-unit">кг</span>
 			</p>
-			<p class="block-catalog__item-name">Сливочное крем-брюле с карамельной подсыпкой</p>
-			<a class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
-		</div>
-		<h2 class="block-catalog-title hidden-title">Каталог. Хиты.</h2>	
-	</section>
+			<a href="catalog-item.html" class="block-catalog__item-name">Сливочное крем-брюле с карамельной подсыпкой</a>
+			<a href="#" class="btn btn-red-back btn-hidden btn-white-text">Быстрый просмотр</a>
+		</li>
+	</ul>	
+</section>
 
-	<section class="block-about">
-		<h1 class="block-about__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h1>
-		<p class="block-about__item">Phasellus luctus augue iaculis odio consequat, sed accumsan est ultricies.
-			 Sed diam ipsum, scelerisque sit amet consequat ac, elementum ac nunc.</p>
-		<p class="block-about__item">Sed a sapien quis diam tristique hendrerit. Phasellus feugiat posuere nulla eu egestas.</p>
-		<p class="block-about__item">Curabitur id aliquam est, ut molestie massa. S
-			ed accumsan, neque nec vulputate efficitur, felis ante commodo purus, vitae dapibus nulla urna a augue. </p>
-		<p class="block-about__item">Nunc arcu sem, bibendum id purus in, posuere tristique lorem. Fusce sed porttitor nibh. Donec lobortis pulvinar augue ut venenatis. 
-		</p>
-	</section>
+<section class="block-about">
+	<h2 class="block-about__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+	<p class="block-about__item">Phasellus luctus augue iaculis odio consequat, sed accumsan est ultricies.
+		Sed diam ipsum, scelerisque sit amet consequat ac, elementum ac nunc.</p>
+	<p class="block-about__item">Sed a sapien quis diam tristique hendrerit. Phasellus feugiat posuere nulla eu egestas.</p>
+	<p class="block-about__item">Curabitur id aliquam est, ut molestie massa. S
+		ed accumsan, neque nec vulputate efficitur, felis ante commodo purus, vitae dapibus nulla urna a augue. </p>
+	<p class="block-about__item">Nunc arcu sem, bibendum id purus in, posuere tristique lorem. Fusce sed porttitor nibh. Donec lobortis pulvinar augue ut venenatis. 
+	</p>
+</section>
 
-	<section class="block-other">		
-		<div class="block-other__item block-other__item-new">				
-		 	<h3 class="block-other__item-new-title">Новое в нашем блоге</h3>
-		 	<a href="#" class="block-other__item-new-details">10 способов сервировки фруктовых щербетов к столу</a>
-		 </div>					 
-		<form class="block-other__item block-other__item-subscribe">	
-			<div class="block-other__item-subscribe-text"> 
-				Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусого, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)
-			</div>	
-			<input type="email" class="block-other__item-subscribe-email" placeholder="Электронная почта">	
-			<input type="button" value="Отправить" class="btn btn-red block-other__item-subscribe-button">
-		</form>	
-		<h2 class="block-other-title hidden-title">Прочее</h2>	
-	</section>
+<!--*** После повторного просмотра вебинара сложилось впечатление, что в один section не стоит объединять неоднородные  по смыслу блоки. Section заменен на div c заголовками в каждом смысловом блоке. Валидатор предупреждениями не кидается. Форму дооформлю после соответствующего вебинара, чтобы 2 раза не переделывать :-) -->
+<div class="block-other">		
+	<article class="block-other__item block-other__item-new">				
+		<h2 class="block-other__item-new-title">Новое в нашем блоге</h2>
+		<a href="#" class="block-other__item-new-details">10 способов сервировки фруктовых щербетов к столу</a>	
+	</article>				 
+	
+	<form class="block-other__item block-other__item-subscribe">
+		<h2 class="title-hidden">Подписка на рассылку</h2>			
+		<p class="block-other__item-subscribe-text"> 
+			Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)
+		</p>	
+		<input type="email" class="block-other__item-subscribe-email" placeholder="Электронная почта">	
+		<input type="submit" value="Отправить" class="btn btn-red block-other__item-subscribe-button" title="Подписаться на рассылку">			
+	</form>		
+</div>
 
-	<section class="block-map">
-		<h2 class="block-map-title hidden-title">Как найти</h2>	
-		<div class="block-map-address">
-			
-		</div>
-	</section>
+<section class="block-map">
+	<h2 class="block-map__title title-hidden">Как найти</h2>	
+	<div class="block-map__info">
+		<p class="block-map__info-p">Адрес главного офиса <br>	и офлайн-магазина: </p>	
+		<p class="block-map__info-p">Ул. Большая Конюшенная <br> 19/8, Санкт-Петербург	</p>
+		<p class="block-map__info-p">Для заказов по телефону:</p>
+		<p class="block-map__info-p">8 812 450-25-25</p>
+		<p class="block-map__info-p">(c 10 до 20, ежедневно)</p>		
+		<a href="#" class="block-map__info-feedback btn btn-red">Форма обратной связи</a>
+	</div>
+</section>
 
-	<footer class="block-footer">
-		<div class="block-footer-part block-footer-social">
-			<a href="#" class="block-footer-social-item" title="Twitter">Twitter</a>
-			<a href="#" class="block-footer-social-item" title="Instagram">Instagram</a>
-			<a href="#" class="block-footer-social-item" title="Facebook">Facebook</a>
-			<a href="#" class="block-footer-social-item" title="B">B</a>
-		</div>
-		<div class="block-footer-part block-footer-center">
-		</div>
-		<div class="block-footer-part block-footer-right">
-		</div>		
-	</footer>
+<footer class="block-footer">
+	<div class="block-footer__part block-footer__social">
+		<h2 class="title-hidden">Наш магазин в соцсетях</h2>	
+		<a href="#" class="block-footer__social-item" title="Twitter">Twitter</a>
+		<a href="#" class="block-footer__social-item" title="Instagram">Instagram</a>
+		<a href="#" class="block-footer__social-item" title="Facebook">Facebook</a>
+		<a href="#" class="block-footer__social-item" title="В контакте">В контакте</a>
+	</div>
+	<div class="block-footer__part block-footer__menu">
+		<h2 class="title-hidden">Подробнее о нас</h2>
+		<a href="#" class="block-footer__menu-link">Для поставщиков</a>
+		<a href="#" class="block-footer__menu-link">Наши документы</a>
+		<a href="#" class="block-footer__menu-link">О производстве</a>
+		<a href="#" class="block-footer__menu-link">Экологические стандарты</a>
+	</div>
+	<div class="block-footer__part block-footer__right">			
+		<a href="https://htmlacademy.ru/intensive/htmlcss"><img class="block-footer__right-html-logo" src="img/logo-html-a.jpg" alt="Логотип HTML Academy" width="120" height="50" title="HTML Академия"></a>
+		<p class="block-footer__logo-copyright">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss" class="underlined">HTML Academy</a><span>@2017</span></p>
+	</div>		
+</footer>
 
-
-  </body>
+</body>
 </html>
